@@ -23,6 +23,7 @@ Version 0.6.0~dev
 	* Do not execute _finalize method if worker exited abnormally.
 	* Remove sleep based loop in Action._execute_worker, closes: #5759.
 	* Support gxf muxing in ffmpeg worker.
+	* Handle progress in ommcp worker, closes: #5913.
 
 Version 0.5.0 Released on 2012/03/29
 
